overflow fixed

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
   text-shadow: 0px 5px 10px  #111
 }
 h3 {
-  font-family: 'down-hill', sans-serif;
+  font-family: 'KidsMonday', sans-serif;
 }
 
 .bg-rosa {
